# ktx

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: actions.yaml
kontext/: __init__.py  generic.py  log.py  simple.py  vars.py
ktx/: __init__.py  _meta.py  abc.py  bind.py  ctx.py  generic.py  ktxid.py  log.py  simple.py  user.py  vars.py  wrap.py
ktx/adapters/: sentry.py
tests/: conftest.py  test_ctx.py  test_custom.py  test_generic.py  test_log.py  test_proxy.py  test_simple.py  test_threads.py  test_user.py
